correct the alignment of the text of the paragraphs on the right

--- a/Week_4/Oleksii Fedorenko/style.css
+++ b/Week_4/Oleksii Fedorenko/style.css
@@ -39,6 +39,7 @@ h2 {
 	font-size: 1.25rem;
 	font-weight: 300;
 	line-height: 1.52rem;
+	text-align: justify;
 	color: #FFFFFF;
 }
 
